# MDA

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  agent.md
.cursor/rules/: master-prompt.md
backend/: .env.cloud.example  .env.example  README.md  desktop_server.py  manage.py
backend/config/: urls.py
backend/permissions/: base.py
backend/requirements/: base.txt  bundle.txt  desktop.txt  dev.txt  production.txt
backend/scripts/: build_desktop_api.py  reset_local_data.py
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: app-info.toml  connection-config.toml  save-pdf.toml
desktop/src-tauri/src/: backend.rs  connection.rs  lib.rs
desktop/src-tauri/windows/: installer-hooks.nsh
desktop/sync/: README.md
docs/api/: API_SPECIFICATION.md
docs/architecture/: DATABASE_ERD.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  MISSING_REQUIREMENTS.md  OFFLINE_SYNC.md  SYSTEM_ARCHITECTURE.md  UI_ARCHITECTURE.md
docs/deployment/: HOSTINGER_VPS.md
docs/product/: FEATURE_ROADMAP.md  PRODUCT_REQUIREMENTS.md  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
infrastructure/: README.md  public-url.env  public-url.env.example
scripts/: deploy_vps.py  deploy_vps_update.py  desktop-frontend-build.mjs  public_url_config.py  push-github.ps1  vps_fix_migration.py  vps_fix_migration.sh  vps_inspect.py
shared/: README.md
(+320 files in other folders)
